--- a/style/style.css
+++ b/style/style.css
@@ -10,20 +10,83 @@ body {
     flex-wrap: wrap;
 }
 
-header {
+.fill-light-gray {
+    color: #D2D2D2;
+    fill: #D2D2D2;
+}
+
+footer {
+    align-items: center;
+    /* background-color: #282828; */
     background-color: red;
-    height: 89vh;
+    bottom: 0;
+    display: flex;
+    height: 11vh;
+    justify-content: space-between;
+    position: fixed;
+    width: 100vw;
+}
+
+header {
+    background-color: black;
+    height: 89.07vh;
     width: 1.75rem;
+}
+
+.logo {
+    width: 1rem;
+    margin-bottom: 0.2rem;
 }
 
 main {
     background-color: green;
     width: calc(100vw - 1.75rem);
-    height: 89vh;
+    height: 89.07vh;
 }
 
-footer {
-    background-color: blueviolet;
-    height: 11vh;
-    width: 100vw;
+nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    padding:  0.2rem 0.29rem 0.1rem 0.29rem;
+}
+
+nav p {
+    display: none;
+}
+
+.nav-sez-container li {
+    display: flex;
+    justify-content: center;
+}
+
+.nav-sez img {
+    width: 17.5px;
+}
+
+.profile-container {
+    justify-self: end;
+}
+
+.profile-container div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.profile-container div:last-child {
+    margin: 0.7rem 0 0.25rem 0;
+}
+
+.profile-container i {
+    border: 1px solid #D2D2D2;
+    border-radius: 25px;
+    color: #D2D2D2;
+    font-size: 6px;
+    padding: 0 1px;
+}
+
+.profile-container img {
+    width: 1rem;
 }
