--- a/style/style.css
+++ b/style/style.css
@@ -30,17 +30,22 @@ footer {
 header {
     background-color: black;
     height: 89.07vh;
-    width: 1.75rem;
+    width: 3.2rem;
 }
 
 .logo {
-    width: 1rem;
-    margin-bottom: 0.2rem;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1rem;
+}
+
+.logo img {
+    width: 1.7rem;
 }
 
 main {
     background-color: green;
-    width: calc(100vw - 1.75rem);
+    width: calc(100vw - 3.2rem);
     height: 89.07vh;
 }
 
@@ -49,7 +54,7 @@ nav {
     flex-direction: column;
     justify-content: space-between;
     height: 100%;
-    padding:  0.2rem 0.29rem 0.1rem 0.29rem;
+    padding:  0.34rem 0 0.1rem 0;
 }
 
 nav p {
@@ -59,10 +64,11 @@ nav p {
 .nav-sez-container li {
     display: flex;
     justify-content: center;
+    margin-bottom: 0.3rem;
 }
 
 .nav-sez img {
-    width: 17.5px;
+    width: 25.5px;
 }
 
 .profile-container {
@@ -76,17 +82,117 @@ nav p {
 }
 
 .profile-container div:last-child {
-    margin: 0.7rem 0 0.25rem 0;
+    margin: 1.4rem 0 0.6rem 0;
 }
 
 .profile-container i {
     border: 1px solid #D2D2D2;
     border-radius: 25px;
     color: #D2D2D2;
-    font-size: 6px;
+    font-size: 9px;
     padding: 0 1px;
 }
 
 .profile-container img {
-    width: 1rem;
+    width: 1.5rem;
+}
+
+@media screen and (min-width: 768px ){
+    .create-playlist {
+        align-items: center;
+        display: flex;
+        padding: 0.45rem 0 0.8rem 1.25rem;
+    }
+    
+    .create-playlist i{
+        background-color: #D2D2D2;
+        font-size: 1.5rem;
+        margin-right: 0.6rem;
+        padding: 0.4rem 0.49rem;
+    }
+
+    .create-playlist span{
+        color: #717171;
+        font-weight: bold;
+    }
+
+    header{
+        width: 14.4rem;
+    }
+
+    nav{
+        align-items: flex-start;
+    }
+
+    nav p , .playlist-container li {
+        color: #717171;
+        display: block;
+        font-size: 0.8rem;
+        font-weight: bold;
+        line-height: 1.6rem;
+    }
+
+    .nav-sez {
+        margin-bottom: 1rem;
+    }
+
+    .nav-sez li {
+        justify-content: start;
+        padding: 0 0 0.05rem 1.25rem;
+    }
+
+    .nav-sez svg, .nav-sez img {
+        margin-right: 0.4rem;
+    }
+
+    .logo img {
+        content: url("../img/logo.svg");
+        margin: 1rem 0 0.8rem 1.3rem;        
+        width: 8rem;
+    }
+
+    .profile-containter {
+        width: 100%;
+    }
+
+    .profile-container div {
+        flex-direction: row;
+    }
+
+    .profile-container div:first-child {
+        border-bottom: 1px solid #717171;
+        padding: 0.25rem 0;
+    }
+
+    .profile-container div:first-child i{
+        margin-right: 0.7rem;
+    }
+
+    .profile-container div:last-child {
+        padding: 0.8rem 0 0.4rem 0;
+    }
+    
+    .profile-container div:last-child img{
+        margin-right: 0.7rem;
+    }
+
+    .profile-container div:last-child p{
+        color: white;
+        font-weight: 800;
+    }
+
+    .profile-container div:first-child, .profile-container div:last-child {
+        margin: 0 1.25rem;
+    }
+
+    .playlist-container p {
+        color: white;
+        font-weight: 1000;
+        padding-left: 1.25rem;
+    }
+
+    .playlist-container li{
+        line-height: 1.9rem;
+        padding-left: 1.25rem;
+    }
 }
