--- a/style/style.css
+++ b/style/style.css
@@ -51,6 +51,7 @@ main {
     background-color: green;
     width: calc(100vw - 3.2rem);
     height: calc(100vh - 5.7rem);
+    overflow-y: auto;
 }
 
 nav {
